parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    BOOL

Grammar

Rule 0     S' -> codeLine
Rule 1     codeLine -> suite
Rule 2     suite -> stmt
Rule 3     suite -> stmt suite
Rule 4     stmt -> exprStmt
Rule 5     stmt -> declar
Rule 6     stmt -> call SEMCOL
Rule 7     stmt -> selectionStmt
Rule 8     stmt -> iterationStmt
Rule 9     stmt -> returnStmt SEMCOL
Rule 10    stmt -> inputStmt SEMCOL
Rule 11    stmt -> outputStmt SEMCOL
Rule 12    stmt -> lineComment
Rule 13    stmt -> blockComment
Rule 14    declar -> varDeclar SEMCOL
Rule 15    declar -> funcDeclar
Rule 16    varDeclar -> VAR ID ASSIGN STRING
Rule 17    varDeclar -> LET ID ASSIGN STRING
Rule 18    varDeclar -> VAR ID ASSIGN exprStmt
Rule 19    varDeclar -> LET ID ASSIGN exprStmt
Rule 20    varDeclar -> VAR ID ASSIGN inputStmt
Rule 21    varDeclar -> LET ID ASSIGN inputStmt
Rule 22    varDeclar -> ID ASSIGN exprStmt
Rule 23    funcDeclar -> FUNC ID LPARENT RPARENT LBRACK suite RBRACK
Rule 24    funcDeclar -> FUNC ID LPARENT params RPARENT LBRACK suite RBRACK
Rule 25    params -> paramsList
Rule 26    paramsList -> ID COMA paramsList
Rule 27    paramsList -> ID
Rule 28    call -> ID
Rule 29    call -> ID POINT call
Rule 30    call -> ID LPARENT RPARENT
Rule 31    call -> ID LPARENT params RPARENT
Rule 32    call -> call POINT call
Rule 33    exprStmt -> simpleExpr
Rule 34    selectionStmt -> IF LPARENT simpleExpr RPARENT LBRACK suite RBRACK
Rule 35    selectionStmt -> IF LPARENT simpleExpr RPARENT LBRACK suite RBRACK ELSE LBRACK suite RBRACK
Rule 36    iterationStmt -> WHILE LPARENT simpleExpr RPARENT LBRACK suite RBRACK
Rule 37    returnStmt -> RETURN
Rule 38    returnStmt -> RETURN simpleExpr
Rule 39    simpleExpr -> simpleExpr OR andExpr
Rule 40    simpleExpr -> andExpr
Rule 41    andExpr -> andExpr AND unaryRelExpr
Rule 42    andExpr -> unaryRelExpr
Rule 43    unaryRelExpr -> NOT unaryRelExpr
Rule 44    unaryRelExpr -> relExpr
Rule 45    relExpr -> sumExpr relop sumExpr
Rule 46    relExpr -> sumExpr
Rule 47    relop -> LOET
Rule 48    relop -> LT
Rule 49    relop -> GOET
Rule 50    relop -> GT
Rule 51    relop -> EQ
Rule 52    relop -> NEQ
Rule 53    sumExpr -> sumExpr sumop term
Rule 54    sumExpr -> term
Rule 55    sumop -> SUM
Rule 56    sumop -> SUBST
Rule 57    term -> term mulop opElement
Rule 58    term -> opElement
Rule 59    opElement -> call
Rule 60    opElement -> NUMBER
Rule 61    mulop -> PROD
Rule 62    mulop -> DIV
Rule 63    inputStmt -> READLINE LPARENT RPARENT
Rule 64    outputStmt -> PRINT LPARENT STRING RPARENT
Rule 65    lineComment -> LINE_COMMENT
Rule 66    blockComment -> BLOCK_COMMENT

Terminals, with rules where they appear

AND                  : 41
ASSIGN               : 16 17 18 19 20 21 22
BLOCK_COMMENT        : 66
BOOL                 : 
COMA                 : 26
DIV                  : 62
ELSE                 : 35
EQ                   : 51
FUNC                 : 23 24
GOET                 : 49
GT                   : 50
ID                   : 16 17 18 19 20 21 22 23 24 26 27 28 29 30 31
IF                   : 34 35
LBRACK               : 23 24 34 35 35 36
LET                  : 17 19 21
LINE_COMMENT         : 65
LOET                 : 47
LPARENT              : 23 24 30 31 34 35 36 63 64
LT                   : 48
NEQ                  : 52
NOT                  : 43
NUMBER               : 60
OR                   : 39
POINT                : 29 32
PRINT                : 64
PROD                 : 61
RBRACK               : 23 24 34 35 35 36
READLINE             : 63
RETURN               : 37 38
RPARENT              : 23 24 30 31 34 35 36 63 64
SEMCOL               : 6 9 10 11 14
STRING               : 16 17 64
SUBST                : 56
SUM                  : 55
VAR                  : 16 18 20
WHILE                : 36
error                : 

Nonterminals, with rules where they appear

andExpr              : 39 40 41
blockComment         : 13
call                 : 6 29 32 32 59
codeLine             : 0
declar               : 5
exprStmt             : 4 18 19 22
funcDeclar           : 15
inputStmt            : 10 20 21
iterationStmt        : 8
lineComment          : 12
mulop                : 57
opElement            : 57 58
outputStmt           : 11
params               : 24 31
paramsList           : 25 26
relExpr              : 44
relop                : 45
returnStmt           : 9
selectionStmt        : 7
simpleExpr           : 33 34 35 36 38 39
stmt                 : 2 3
suite                : 1 3 23 24 34 35 35 36
sumExpr              : 45 45 46 53
sumop                : 53
term                 : 53 54 57
unaryRelExpr         : 41 42 43
varDeclar            : 14

Parsing method: LALR

state 0

    (0) S' -> . codeLine
    (1) codeLine -> . suite
    (2) suite -> . stmt
    (3) suite -> . stmt suite
    (4) stmt -> . exprStmt
    (5) stmt -> . declar
    (6) stmt -> . call SEMCOL
    (7) stmt -> . selectionStmt
    (8) stmt -> . iterationStmt
    (9) stmt -> . returnStmt SEMCOL
    (10) stmt -> . inputStmt SEMCOL
    (11) stmt -> . outputStmt SEMCOL
    (12) stmt -> . lineComment
    (13) stmt -> . blockComment
    (33) exprStmt -> . simpleExpr
    (14) declar -> . varDeclar SEMCOL
    (15) declar -> . funcDeclar
    (28) call -> . ID
    (29) call -> . ID POINT call
    (30) call -> . ID LPARENT RPARENT
    (31) call -> . ID LPARENT params RPARENT
    (32) call -> . call POINT call
    (34) selectionStmt -> . IF LPARENT simpleExpr RPARENT LBRACK suite RBRACK
    (35) selectionStmt -> . IF LPARENT simpleExpr RPARENT LBRACK suite RBRACK ELSE LBRACK suite RBRACK
    (36) iterationStmt -> . WHILE LPARENT simpleExpr RPARENT LBRACK suite RBRACK
    (37) returnStmt -> . RETURN
    (38) returnStmt -> . RETURN simpleExpr
    (63) inputStmt -> . READLINE LPARENT RPARENT
    (64) outputStmt -> . PRINT LPARENT STRING RPARENT
    (65) lineComment -> . LINE_COMMENT
    (66) blockComment -> . BLOCK_COMMENT
    (39) simpleExpr -> . simpleExpr OR andExpr
    (40) simpleExpr -> . andExpr
    (16) varDeclar -> . VAR ID ASSIGN STRING
    (17) varDeclar -> . LET ID ASSIGN STRING
    (18) varDeclar -> . VAR ID ASSIGN exprStmt
    (19) varDeclar -> . LET ID ASSIGN exprStmt
    (20) varDeclar -> . VAR ID ASSIGN inputStmt
    (21) varDeclar -> . LET ID ASSIGN inputStmt
    (22) varDeclar -> . ID ASSIGN exprStmt
    (23) funcDeclar -> . FUNC ID LPARENT RPARENT LBRACK suite RBRACK
    (24) funcDeclar -> . FUNC ID LPARENT params RPARENT LBRACK suite RBRACK
    (41) andExpr -> . andExpr AND unaryRelExpr
    (42) andExpr -> . unaryRelExpr
    (43) unaryRelExpr -> . NOT unaryRelExpr
    (44) unaryRelExpr -> . relExpr
    (45) relExpr -> . sumExpr relop sumExpr
    (46) relExpr -> . sumExpr
    (53) sumExpr -> . sumExpr sumop term
    (54) sumExpr -> . term
    (57) term -> . term mulop opElement
    (58) term -> . opElement
    (59) opElement -> . call
    (60) opElement -> . NUMBER

    ID              shift and go to state 22
    IF              shift and go to state 19
    WHILE           shift and go to state 9
    RETURN          shift and go to state 23
    READLINE        shift and go to state 16
    PRINT           shift and go to state 7
    LINE_COMMENT    shift and go to state 8
    BLOCK_COMMENT   shift and go to state 28
    VAR             shift and go to state 26
    LET             shift and go to state 12
    FUNC            shift and go to state 17
    NOT             shift and go to state 25
    NUMBER          shift and go to state 30

    codeLine                       shift and go to state 18
    sumExpr                        shift and go to state 5
    funcDeclar                     shift and go to state 1
    outputStmt                     shift and go to state 20
    opElement                      shift and go to state 21
    term                           shift and go to state 2
    inputStmt                      shift and go to state 4
    suite                          shift and go to state 24
    declar                         shift and go to state 29
    call                           shift and go to state 6
    simpleExpr                     shift and go to state 3
    andExpr                        shift and go to state 27
    relExpr                        shift and go to state 10
    selectionStmt                  shift and go to state 11
    exprStmt                       shift and go to state 14
    returnStmt                     shift and go to state 31
    lineComment                    shift and go to state 13
    unaryRelExpr                   shift and go to state 33
    iterationStmt                  shift and go to state 15
    blockComment                   shift and go to state 34
    varDeclar                      shift and go to state 32
    stmt                           shift and go to state 35

state 1

    (15) declar -> funcDeclar .

    ID              reduce using rule 15 (declar -> funcDeclar .)
    IF              reduce using rule 15 (declar -> funcDeclar .)
    WHILE           reduce using rule 15 (declar -> funcDeclar .)
    RETURN          reduce using rule 15 (declar -> funcDeclar .)
    READLINE        reduce using rule 15 (declar -> funcDeclar .)
    PRINT           reduce using rule 15 (declar -> funcDeclar .)
    LINE_COMMENT    reduce using rule 15 (declar -> funcDeclar .)
    BLOCK_COMMENT   reduce using rule 15 (declar -> funcDeclar .)
    VAR             reduce using rule 15 (declar -> funcDeclar .)
    LET             reduce using rule 15 (declar -> funcDeclar .)
    FUNC            reduce using rule 15 (declar -> funcDeclar .)
    NOT             reduce using rule 15 (declar -> funcDeclar .)
    NUMBER          reduce using rule 15 (declar -> funcDeclar .)
    $end            reduce using rule 15 (declar -> funcDeclar .)
    RBRACK          reduce using rule 15 (declar -> funcDeclar .)


state 2

    (54) sumExpr -> term .
    (57) term -> term . mulop opElement
    (61) mulop -> . PROD
    (62) mulop -> . DIV

    LOET            reduce using rule 54 (sumExpr -> term .)
    LT              reduce using rule 54 (sumExpr -> term .)
    GOET            reduce using rule 54 (sumExpr -> term .)
    GT              reduce using rule 54 (sumExpr -> term .)
    EQ              reduce using rule 54 (sumExpr -> term .)
    NEQ             reduce using rule 54 (sumExpr -> term .)
    SUM             reduce using rule 54 (sumExpr -> term .)
    SUBST           reduce using rule 54 (sumExpr -> term .)
    AND             reduce using rule 54 (sumExpr -> term .)
    RPARENT         reduce using rule 54 (sumExpr -> term .)
    OR              reduce using rule 54 (sumExpr -> term .)
    ID              reduce using rule 54 (sumExpr -> term .)
    IF              reduce using rule 54 (sumExpr -> term .)
    WHILE           reduce using rule 54 (sumExpr -> term .)
    RETURN          reduce using rule 54 (sumExpr -> term .)
    READLINE        reduce using rule 54 (sumExpr -> term .)
    PRINT           reduce using rule 54 (sumExpr -> term .)
    LINE_COMMENT    reduce using rule 54 (sumExpr -> term .)
    BLOCK_COMMENT   reduce using rule 54 (sumExpr -> term .)
    VAR             reduce using rule 54 (sumExpr -> term .)
    LET             reduce using rule 54 (sumExpr -> term .)
    FUNC            reduce using rule 54 (sumExpr -> term .)
    NOT             reduce using rule 54 (sumExpr -> term .)
    NUMBER          reduce using rule 54 (sumExpr -> term .)
    RBRACK          reduce using rule 54 (sumExpr -> term .)
    SEMCOL          reduce using rule 54 (sumExpr -> term .)
    $end            reduce using rule 54 (sumExpr -> term .)
    PROD            shift and go to state 36
    DIV             shift and go to state 37

    mulop                          shift and go to state 38

state 3

    (33) exprStmt -> simpleExpr .
    (39) simpleExpr -> simpleExpr . OR andExpr

    ID              reduce using rule 33 (exprStmt -> simpleExpr .)
    IF              reduce using rule 33 (exprStmt -> simpleExpr .)
    WHILE           reduce using rule 33 (exprStmt -> simpleExpr .)
    RETURN          reduce using rule 33 (exprStmt -> simpleExpr .)
    READLINE        reduce using rule 33 (exprStmt -> simpleExpr .)
    PRINT           reduce using rule 33 (exprStmt -> simpleExpr .)
    LINE_COMMENT    reduce using rule 33 (exprStmt -> simpleExpr .)
    BLOCK_COMMENT   reduce using rule 33 (exprStmt -> simpleExpr .)
    VAR             reduce using rule 33 (exprStmt -> simpleExpr .)
    LET             reduce using rule 33 (exprStmt -> simpleExpr .)
    FUNC            reduce using rule 33 (exprStmt -> simpleExpr .)
    NOT             reduce using rule 33 (exprStmt -> simpleExpr .)
    NUMBER          reduce using rule 33 (exprStmt -> simpleExpr .)
    RBRACK          reduce using rule 33 (exprStmt -> simpleExpr .)
    SEMCOL          reduce using rule 33 (exprStmt -> simpleExpr .)
    $end            reduce using rule 33 (exprStmt -> simpleExpr .)
    OR              shift and go to state 39


state 4

    (10) stmt -> inputStmt . SEMCOL

    SEMCOL          shift and go to state 40


state 5

    (45) relExpr -> sumExpr . relop sumExpr
    (46) relExpr -> sumExpr .
    (53) sumExpr -> sumExpr . sumop term
    (47) relop -> . LOET
    (48) relop -> . LT
    (49) relop -> . GOET
    (50) relop -> . GT
    (51) relop -> . EQ
    (52) relop -> . NEQ
    (55) sumop -> . SUM
    (56) sumop -> . SUBST

    AND             reduce using rule 46 (relExpr -> sumExpr .)
    OR              reduce using rule 46 (relExpr -> sumExpr .)
    ID              reduce using rule 46 (relExpr -> sumExpr .)
    IF              reduce using rule 46 (relExpr -> sumExpr .)
    WHILE           reduce using rule 46 (relExpr -> sumExpr .)
    RETURN          reduce using rule 46 (relExpr -> sumExpr .)
    READLINE        reduce using rule 46 (relExpr -> sumExpr .)
    PRINT           reduce using rule 46 (relExpr -> sumExpr .)
    LINE_COMMENT    reduce using rule 46 (relExpr -> sumExpr .)
    BLOCK_COMMENT   reduce using rule 46 (relExpr -> sumExpr .)
    VAR             reduce using rule 46 (relExpr -> sumExpr .)
    LET             reduce using rule 46 (relExpr -> sumExpr .)
    FUNC            reduce using rule 46 (relExpr -> sumExpr .)
    NOT             reduce using rule 46 (relExpr -> sumExpr .)
    NUMBER          reduce using rule 46 (relExpr -> sumExpr .)
    RBRACK          reduce using rule 46 (relExpr -> sumExpr .)
    SEMCOL          reduce using rule 46 (relExpr -> sumExpr .)
    RPARENT         reduce using rule 46 (relExpr -> sumExpr .)
    $end            reduce using rule 46 (relExpr -> sumExpr .)
    LOET            shift and go to state 43
    LT              shift and go to state 49
    GOET            shift and go to state 44
    GT              shift and go to state 42
    EQ              shift and go to state 50
    NEQ             shift and go to state 45
    SUM             shift and go to state 41
    SUBST           shift and go to state 48

    sumop                          shift and go to state 46
    relop                          shift and go to state 47

state 6

    (6) stmt -> call . SEMCOL
    (32) call -> call . POINT call
    (59) opElement -> call .

    SEMCOL          shift and go to state 51
    POINT           shift and go to state 52
    PROD            reduce using rule 59 (opElement -> call .)
    DIV             reduce using rule 59 (opElement -> call .)
    LOET            reduce using rule 59 (opElement -> call .)
    LT              reduce using rule 59 (opElement -> call .)
    GOET            reduce using rule 59 (opElement -> call .)
    GT              reduce using rule 59 (opElement -> call .)
    EQ              reduce using rule 59 (opElement -> call .)
    NEQ             reduce using rule 59 (opElement -> call .)
    SUM             reduce using rule 59 (opElement -> call .)
    SUBST           reduce using rule 59 (opElement -> call .)
    AND             reduce using rule 59 (opElement -> call .)
    OR              reduce using rule 59 (opElement -> call .)
    ID              reduce using rule 59 (opElement -> call .)
    IF              reduce using rule 59 (opElement -> call .)
    WHILE           reduce using rule 59 (opElement -> call .)
    RETURN          reduce using rule 59 (opElement -> call .)
    READLINE        reduce using rule 59 (opElement -> call .)
    PRINT           reduce using rule 59 (opElement -> call .)
    LINE_COMMENT    reduce using rule 59 (opElement -> call .)
    BLOCK_COMMENT   reduce using rule 59 (opElement -> call .)
    VAR             reduce using rule 59 (opElement -> call .)
    LET             reduce using rule 59 (opElement -> call .)
    FUNC            reduce using rule 59 (opElement -> call .)
    NOT             reduce using rule 59 (opElement -> call .)
    NUMBER          reduce using rule 59 (opElement -> call .)
    RBRACK          reduce using rule 59 (opElement -> call .)
    $end            reduce using rule 59 (opElement -> call .)


state 7

    (64) outputStmt -> PRINT . LPARENT STRING RPARENT

    LPARENT         shift and go to state 53


state 8

    (65) lineComment -> LINE_COMMENT .

    ID              reduce using rule 65 (lineComment -> LINE_COMMENT .)
    IF              reduce using rule 65 (lineComment -> LINE_COMMENT .)
    WHILE           reduce using rule 65 (lineComment -> LINE_COMMENT .)
    RETURN          reduce using rule 65 (lineComment -> LINE_COMMENT .)
    READLINE        reduce using rule 65 (lineComment -> LINE_COMMENT .)
    PRINT           reduce using rule 65 (lineComment -> LINE_COMMENT .)
    LINE_COMMENT    reduce using rule 65 (lineComment -> LINE_COMMENT .)
    BLOCK_COMMENT   reduce using rule 65 (lineComment -> LINE_COMMENT .)
    VAR             reduce using rule 65 (lineComment -> LINE_COMMENT .)
    LET             reduce using rule 65 (lineComment -> LINE_COMMENT .)
    FUNC            reduce using rule 65 (lineComment -> LINE_COMMENT .)
    NOT             reduce using rule 65 (lineComment -> LINE_COMMENT .)
    NUMBER          reduce using rule 65 (lineComment -> LINE_COMMENT .)
    RBRACK          reduce using rule 65 (lineComment -> LINE_COMMENT .)
    $end            reduce using rule 65 (lineComment -> LINE_COMMENT .)


state 9

    (36) iterationStmt -> WHILE . LPARENT simpleExpr RPARENT LBRACK suite RBRACK

    LPARENT         shift and go to state 54


state 10

    (44) unaryRelExpr -> relExpr .

    AND             reduce using rule 44 (unaryRelExpr -> relExpr .)
    OR              reduce using rule 44 (unaryRelExpr -> relExpr .)
    SEMCOL          reduce using rule 44 (unaryRelExpr -> relExpr .)
    ID              reduce using rule 44 (unaryRelExpr -> relExpr .)
    IF              reduce using rule 44 (unaryRelExpr -> relExpr .)
    WHILE           reduce using rule 44 (unaryRelExpr -> relExpr .)
    RETURN          reduce using rule 44 (unaryRelExpr -> relExpr .)
    READLINE        reduce using rule 44 (unaryRelExpr -> relExpr .)
    PRINT           reduce using rule 44 (unaryRelExpr -> relExpr .)
    LINE_COMMENT    reduce using rule 44 (unaryRelExpr -> relExpr .)
    BLOCK_COMMENT   reduce using rule 44 (unaryRelExpr -> relExpr .)
    VAR             reduce using rule 44 (unaryRelExpr -> relExpr .)
    LET             reduce using rule 44 (unaryRelExpr -> relExpr .)
    FUNC            reduce using rule 44 (unaryRelExpr -> relExpr .)
    NOT             reduce using rule 44 (unaryRelExpr -> relExpr .)
    NUMBER          reduce using rule 44 (unaryRelExpr -> relExpr .)
    $end            reduce using rule 44 (unaryRelExpr -> relExpr .)
    RBRACK          reduce using rule 44 (unaryRelExpr -> relExpr .)
    RPARENT         reduce using rule 44 (unaryRelExpr -> relExpr .)


state 11

    (7) stmt -> selectionStmt .

    ID              reduce using rule 7 (stmt -> selectionStmt .)
    IF              reduce using rule 7 (stmt -> selectionStmt .)
    WHILE           reduce using rule 7 (stmt -> selectionStmt .)
    RETURN          reduce using rule 7 (stmt -> selectionStmt .)
    READLINE        reduce using rule 7 (stmt -> selectionStmt .)
    PRINT           reduce using rule 7 (stmt -> selectionStmt .)
    LINE_COMMENT    reduce using rule 7 (stmt -> selectionStmt .)
    BLOCK_COMMENT   reduce using rule 7 (stmt -> selectionStmt .)
    VAR             reduce using rule 7 (stmt -> selectionStmt .)
    LET             reduce using rule 7 (stmt -> selectionStmt .)
    FUNC            reduce using rule 7 (stmt -> selectionStmt .)
    NOT             reduce using rule 7 (stmt -> selectionStmt .)
    NUMBER          reduce using rule 7 (stmt -> selectionStmt .)
    RBRACK          reduce using rule 7 (stmt -> selectionStmt .)
    $end            reduce using rule 7 (stmt -> selectionStmt .)


state 12

    (17) varDeclar -> LET . ID ASSIGN STRING
    (19) varDeclar -> LET . ID ASSIGN exprStmt
    (21) varDeclar -> LET . ID ASSIGN inputStmt

    ID              shift and go to state 55


state 13

    (12) stmt -> lineComment .

    ID              reduce using rule 12 (stmt -> lineComment .)
    IF              reduce using rule 12 (stmt -> lineComment .)
    WHILE           reduce using rule 12 (stmt -> lineComment .)
    RETURN          reduce using rule 12 (stmt -> lineComment .)
    READLINE        reduce using rule 12 (stmt -> lineComment .)
    PRINT           reduce using rule 12 (stmt -> lineComment .)
    LINE_COMMENT    reduce using rule 12 (stmt -> lineComment .)
    BLOCK_COMMENT   reduce using rule 12 (stmt -> lineComment .)
    VAR             reduce using rule 12 (stmt -> lineComment .)
    LET             reduce using rule 12 (stmt -> lineComment .)
    FUNC            reduce using rule 12 (stmt -> lineComment .)
    NOT             reduce using rule 12 (stmt -> lineComment .)
    NUMBER          reduce using rule 12 (stmt -> lineComment .)
    RBRACK          reduce using rule 12 (stmt -> lineComment .)
    $end            reduce using rule 12 (stmt -> lineComment .)


state 14

    (4) stmt -> exprStmt .

    ID              reduce using rule 4 (stmt -> exprStmt .)
    IF              reduce using rule 4 (stmt -> exprStmt .)
    WHILE           reduce using rule 4 (stmt -> exprStmt .)
    RETURN          reduce using rule 4 (stmt -> exprStmt .)
    READLINE        reduce using rule 4 (stmt -> exprStmt .)
    PRINT           reduce using rule 4 (stmt -> exprStmt .)
    LINE_COMMENT    reduce using rule 4 (stmt -> exprStmt .)
    BLOCK_COMMENT   reduce using rule 4 (stmt -> exprStmt .)
    VAR             reduce using rule 4 (stmt -> exprStmt .)
    LET             reduce using rule 4 (stmt -> exprStmt .)
    FUNC            reduce using rule 4 (stmt -> exprStmt .)
    NOT             reduce using rule 4 (stmt -> exprStmt .)
    NUMBER          reduce using rule 4 (stmt -> exprStmt .)
    RBRACK          reduce using rule 4 (stmt -> exprStmt .)
    $end            reduce using rule 4 (stmt -> exprStmt .)


state 15

    (8) stmt -> iterationStmt .

    ID              reduce using rule 8 (stmt -> iterationStmt .)
    IF              reduce using rule 8 (stmt -> iterationStmt .)
    WHILE           reduce using rule 8 (stmt -> iterationStmt .)
    RETURN          reduce using rule 8 (stmt -> iterationStmt .)
    READLINE        reduce using rule 8 (stmt -> iterationStmt .)
    PRINT           reduce using rule 8 (stmt -> iterationStmt .)
    LINE_COMMENT    reduce using rule 8 (stmt -> iterationStmt .)
    BLOCK_COMMENT   reduce using rule 8 (stmt -> iterationStmt .)
    VAR             reduce using rule 8 (stmt -> iterationStmt .)
    LET             reduce using rule 8 (stmt -> iterationStmt .)
    FUNC            reduce using rule 8 (stmt -> iterationStmt .)
    NOT             reduce using rule 8 (stmt -> iterationStmt .)
    NUMBER          reduce using rule 8 (stmt -> iterationStmt .)
    RBRACK          reduce using rule 8 (stmt -> iterationStmt .)
    $end            reduce using rule 8 (stmt -> iterationStmt .)


state 16

    (63) inputStmt -> READLINE . LPARENT RPARENT

    LPARENT         shift and go to state 56


state 17

    (23) funcDeclar -> FUNC . ID LPARENT RPARENT LBRACK suite RBRACK
    (24) funcDeclar -> FUNC . ID LPARENT params RPARENT LBRACK suite RBRACK

    ID              shift and go to state 57


state 18

    (0) S' -> codeLine .



state 19

    (34) selectionStmt -> IF . LPARENT simpleExpr RPARENT LBRACK suite RBRACK
    (35) selectionStmt -> IF . LPARENT simpleExpr RPARENT LBRACK suite RBRACK ELSE LBRACK suite RBRACK

    LPARENT         shift and go to state 58


state 20

    (11) stmt -> outputStmt . SEMCOL

    SEMCOL          shift and go to state 59


state 21

    (58) term -> opElement .
